--- a/payments/src/main/resources/templates/pay.html
+++ b/payments/src/main/resources/templates/pay.html
@@ -53,7 +53,7 @@
 
 <!-- 최종 결제 -->
 <div class="bg-gray-800 shadow-lg rounded-2xl p-6">
-    <p class="text-gray-400">거래정보 제공 동의: <span class="text-blue-400">조이(유)</span></p>
+    <p class="text-gray-400">거래정보 제공 동의: <span class="text-blue-400" th:text="${clientName}"></span></p>
     <p class="text-gray-400 mt-4">주문 내용을 확인하였으며, 정보 제공 등에 동의합니다.</p>
     <button id="submitPay" class="bg-blue-600 text-gray-100 w-full py-3 rounded-lg mt-4 font-semibold hover:bg-blue-500 transition duration-200">
         충전 후 결제하기
