--- a/payments/src/main/resources/templates/pay.html
+++ b/payments/src/main/resources/templates/pay.html
@@ -37,18 +37,20 @@
     <div class="mt-4">
         <div class="flex items-center space-x-4">
             <div class="w-10 h-10 bg-blue-600 rounded-full flex items-center justify-center text-gray-200 font-bold">O</div>
-            <p class="text-gray-300">Haru Pay 머니 충전결제</p>
+            <p class="text-gray-300" th:if="${moneyBalance.compareTo(amount) == -1}">Haru Pay 머니 충전결제</p>
+            <p class="text-gray-300" th:if="${moneyBalance.compareTo(amount) != -1}">Haru Pay 머니</p>
             <span class="bg-pink-600 text-pink-100 text-sm px-3 py-1 rounded-full font-medium">최대 3% 적립</span>
         </div>
-        <div class="mt-4 border-t border-gray-700 pt-4">
+        <div class="mt-4 border-t border-gray-700 pt-4" th:if="${moneyBalance.compareTo(amount) == -1}">
             <label for="charge" class="block text-gray-400 mb-2">충전 금액</label>
-            <select id="charge" class="border border-gray-600 bg-gray-700 rounded-lg w-full px-4 py-2 text-gray-200 focus:ring-2 focus:ring-blue-500">
-                <option>10,000원</option>
-            </select>
+            <div id="charge" class="border border-gray-600 bg-gray-700 rounded-lg w-full px-4 py-2 text-gray-200 focus:ring-2 focus:ring-blue-500">
+                <span th:text="${#numbers.formatDecimal(shortfallAmount, 0, 'POINT', 0,'COMMA').concat('원')}"></span>
+            </div>
             <label for="bank" class="block text-gray-400 mt-4 mb-2">결제 계좌</label>
-            <select id="bank" class="border border-gray-600 bg-gray-700 rounded-lg w-full px-4 py-2 text-gray-200 focus:ring-2 focus:ring-pink-500">
-                <option>KB국민 842********7139</option>
-            </select>
+            <div id="bank" class="border border-gray-600 bg-gray-700 rounded-lg w-full px-4 py-2 text-gray-200 focus:ring-2 focus:ring-pink-500">
+                <span th:text="${registeredBankName}"></span>
+                <span th:text="${registeredBankAccountNumber}"></span>
+            </div>
         </div>
     </div>
 </div>
